[package]
name = "rnr"
version = "0.2.2"
authors = ["Ismael González Valverde <ismgonval@gmail.com>"]
description = """
RnR is a command-line tool to rename multiple files and directories that
supports regular expressions
"""
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/ChuckDaniels87/rnr"
repository = "https://github.com/ChuckDaniels87/rnr"
build = "build.rs"
readme = "README.md"

[dependencies]
ansi_term = "0.11"
atty = "0.2"
clap = "~2.32"
chrono = "0.4"
path_abs = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
walkdir= "2"

[build-dependencies]
clap = "~2.32"

[badges]
travis-ci = { repository = "ChuckDaniels87/rnr", branch = "master" }
appveyor = { repository = "ChuckDaniels87/rnr", branch = "master" }
