[package]
name = "rnr"
version = "0.4.2"
authors = ["Ismael González Valverde <ismgonval@gmail.com>"]
description = """
RnR is a command-line tool to rename multiple files and directories that
supports regular expressions
"""
edition = "2021"
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/ismaelgv/rnr"
repository = "https://github.com/ismaelgv/rnr"
readme = "README.md"

[dependencies]
ansi_term = "0.11"
clap = { version = "^4.0", features = ["derive"] }
chrono = "0.4"
path_abs = "^0.4"
regex = "^1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tempfile = "^3"
walkdir= "^2"
difference = "^2.0.0"
any_ascii = "^0.3.0"

[build-dependencies]
clap = { version = "^4.0", features = ["derive"] }
clap_complete = "^4.0"
